# ska-mid-cbf-fhs-vcc

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .readthedocs.yaml  .release  CHANGELOG.rst  CODEOWNERS  Dockerfile  Makefile  README.md  devcommon.Dockerfile  pyproject.toml  pytest.ini  setup.cfg
.images/ska-mid-cbf-fhs-vcc-boogie/: Dockerfile
certs/: README.md
charts/ska-mid-cbf-fhs-vcc/: Chart.yaml  output.txt  values.yaml
charts/ska-mid-cbf-fhs-vcc-boogie/: Chart.yaml  values.yaml
charts/ska-mid-cbf-fhs-vcc-boogie/templates/: deployment.yaml  service.yaml
charts/ska-mid-cbf-fhs-vcc/data/: b123_vcc_osppfb_channeliser.yaml  fhs_vcc_stack.yaml  fhs_vcc_stack_i.yaml  frequency_slice_selection.yaml  mac.yaml  mac200.yaml  macbase.yaml  packet_validation.yaml  vcc_all_bands.yaml  wideband_frequency_shifter.yaml  wideband_input_buffer.yaml
charts/ska-mid-cbf-fhs-vcc/templates/: _fhs-vcc-role.yaml  _fhsVccStack.tpl  _helpers.tpl  _multidevice-svc.yaml  bitstream-download-job.yaml  bitstream-pv.yaml  deploy-standalone.yaml  deviceservers.yaml  low-level-config-map.yaml  pv.yaml  pyro-test-configmap.yaml
charts/ska-mid-cbf-umbrella/: Chart.yaml  values.yaml
charts/ska-mid-cbf-umbrella/charts/: ska-tango-base-0.4.9.tgz  ska-tango-util-0.4.10.tgz
config/: test_config.yaml
config/emulator/: 0.0.1.json
custom/ska_tango_base-1.0.0/: MANIFEST.skao.int  PKG-INFO  pyproject.toml
docs/: README.md
docs/src/: conf.py  index.rst
docs/src/blocks/: B123VCC-OSPPFB_Channelizer.rst  Circuit_Switch.md  Ethernet_MAC.md  Frequency_Slice_Selection.md  Packet_Validation.md  Template_Block.md  Wideband_Frequency_Shifter.md  Wideband_Input_Buffer.md
docs/src/design/: fhs-vcc-design.md
docs/src/diagrams/: AbortCommands.puml  ConfigureScan.puml  EndScan.puml  GoToIdle.puml  ObsReset.puml  Scan.puml  vcc-control.puml
docs/src/icd/: icd.md
docs/src/package/: dev_deployment.md  gitlab_deployment.md  guide.rst  minikube_setup.md
images/boogie/: Dockerfile  README.md
images/ska-mid-cbf-fhs-vcc-boogie/: Dockerfile
images/ska_mid_cbf_fhs_vcc/: Dockerfile
scripts/: deploy_boogie_and_fhs_vcc.sh  find_latest_main_tag.sh
src/ska-mid-cbf-fhs-vcc/: pybind_wrapper.cpp  vcc.cpp  vcc.h
src/ska_mid_cbf_fhs_vcc/: __init__.py  fhs_vcc_stack_device_server.py
src/ska_mid_cbf_fhs_vcc/api/: b123_vcc_osppfb_channeliser_wrapper.py  frequency_slice_selection_wrapper.py  mac_api_wrapper.py  packet_validation_api_wrapper.py  pyro_client.py  wideband_frequency_shifter_wrapper.py  wideband_input_buffer_api_wrapper.py
src/ska_mid_cbf_fhs_vcc/b123_vcc_osppfb_channeliser/: b123_vcc_osppfb_channeliser_component_manager.py  b123_vcc_osppfb_channeliser_device.py
src/ska_mid_cbf_fhs_vcc/b123_vcc_osppfb_channelizer/: b123_vcc_osppfb_channelizer_component_manager.py  b123_vcc_osppfb_channelizer_device.py  b123_vcc_osppfb_channelizer_manager.py  b123_vcc_osppfb_channelizer_simulator.py
src/ska_mid_cbf_fhs_vcc/circuit_switch/: circuit_switch_component_manager.py  circuit_switch_device.py  circuit_switch_manager.py  circuit_switch_simulator.py
src/ska_mid_cbf_fhs_vcc/common/: fhs_base_device.py  fhs_component_manager_base.py  fhs_health_monitor.py  fhs_obs_state.py  fhs_state.py  ftile_ethernet_manager.py  ftile_ethernet_simulator.py  utils.py  wideband_power_meter_manager.py  wideband_power_meter_simulator.py
src/ska_mid_cbf_fhs_vcc/frequency_slice_selection/: frequency_slice_selection_component_manager.py  frequency_slice_selection_device.py  frequency_slice_selection_manager.py  frequency_slice_selection_simulator.py
src/ska_mid_cbf_fhs_vcc/helpers/: frequency_band_enums.py
src/ska_mid_cbf_fhs_vcc/ip_block_manager/: __init__.py  base_ip_block_manager.py  base_monitoring_ip_block_manager.py  non_blocking_function.py
src/ska_mid_cbf_fhs_vcc/mac/: mac_200_device.py  mac_200gb_device.py  mac_component_manager.py  mac_controller_simulator.py
src/ska_mid_cbf_fhs_vcc/packet_validation/: packet_validation_component_manager.py  packet_validation_device.py  packet_validation_manager.py  packet_validation_simulator.py
src/ska_mid_cbf_fhs_vcc/packetizer/: packetizer_component_manager.py  packetizer_device.py  packetizer_simulator.py  wideband_power_meter_component_manager.py
src/ska_mid_cbf_fhs_vcc/vcc_all_bands/: vcc_all_bands_component_manager.py  vcc_all_bands_config.py  vcc_all_bands_dataclasses.py  vcc_all_bands_device.py  vcc_all_bands_helpers.py  vcc_sim.py
src/ska_mid_cbf_fhs_vcc/vcc_osppfb_channeliser/: vcc_osppfb_channelizer_component_manager.py  vcc_osppfb_channelizer_device.py
src/ska_mid_cbf_fhs_vcc/vcc_osppfb_channelizer/: vcc_osppfb_channelizer_component_manager.py  vcc_osppfb_channelizer_device.py
src/ska_mid_cbf_fhs_vcc/vcc_stream_merge/: vcc_stream_merge_component_manager.py  vcc_stream_merge_device.py  vcc_stream_merge_manager.py  vcc_stream_merge_simulator.py
src/ska_mid_cbf_fhs_vcc/wideband_frequency_shifter/: wideband_frequency_shifter_component_manager.py  wideband_frequency_shifter_device.py  wideband_frequency_shifter_manager.py  wideband_frequency_shifter_simulator.py
src/ska_mid_cbf_fhs_vcc/wideband_input_buffer/: wideband_input_buffer_component_manager.py  wideband_input_buffer_device.py  wideband_input_buffer_manager.py  wideband_input_buffer_simulator.py
src/ska_mid_cbf_fhs_vcc/wideband_power_meter/: wideband_power_meter_component_manager.py  wideband_power_meter_device.py
tests/: example_test.py  pytest.ini
tests/mac/: mac_device_test.py
tests/resources/: low_level_ds_config.yaml
tests/state_machine/: fhs_ops_state_test.py
tests/test_data/device_config/: b123_vcc_osppfb_channelizer.json  b123_vcc_osppfb_channelizer_invalid.json  frequency_slice_selection.json  frequency_slice_selection_invalid.json  vcc_all_bands.json  vcc_stream_merge.json  wideband_frequency_shifter.json  wideband_input_buffer.json  wideband_input_buffer_health_failure.json
tests/test_data/device_status/: b123_vcc_osppfb_channelizer.json
tests/unit/b123_vcc_osppfb_channeliser/: B123VccOsppfbChannelizer_test.py  conftest.py  test_vcc123.py
(+81 files in other folders)
