[project]
license = "BSD license"
name = "ska-mid-cbf-fhs-vcc"
version = "0.1.0"
description = "SKA Mid.CBF FHS VCC"

[project.scripts]
FhsVccStackDeviceServer = 'ska_mid_cbf_fhs_vcc.fhs_vcc_stack_device_server:main'

[tool.poetry]
packages = [{ include = "ska_mid_cbf_fhs_vcc", from = "src" }]
name = "ska-mid-cbf-fhs-vcc"
version = "0.1.0"
description = "SKA Mid.CBF FHS VCC"
authors = [
  "Jason Turner <jason.turner@mda.space>", "Ben Herriott <ben.herriott@mda.space>", "Justin Wamback <justin.wamback@mda.space>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
backoff = "^2.2.1"
typing-extensions = "^4.8.0"
pytango = "^9.5.1"
pyyaml = "^6.0.1"
requests = "^2.32.3"
ska-tango-base = "1.0.0"
ska-control-model = "1.1.0"
ska-tango-testing = "0.7.2"
ska-ser-log-transactions = "^0.2.2+ae0f5c92"
ska-telmodel = "1.15.0"
polling2 = "^0.5.0"
dataclasses-json = "^0.6.7"
debugpy = "^1.8.5"
ska-mid-cbf-fhs-common = { version = "0.0.1+dev.cd2bd268e", source = "gitlab-fhs-common" }

[tool.poetry.group.dev.dependencies]
pytest-pydocstyle = "2.3.2"
pytest-pycodestyle = "2.3.1"
pytest = "8.3.1"
pytest-bdd = "^7.2.0"
pytest-cov = "^5.0.0"
pytest-forked = "^1.6.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-repeat = "^0.9.3"
pytest-pylint = "^0.21.0"
pylint = "3.2.6"
pylint-junit = "0.3.4"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6"
ska-ser-sphinx-theme = "^0.1.1"
myst-parser = "^2.0.0"
sphinx_collapse = "^0.1.3"
sphinxcontrib-mermaid = "^0.9.2"
black = "^23.9.1"
flake8 = "^6.1.0"
sphinxcontrib-plantuml = "^0.26"

[[tool.poetry.source]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[[tool.poetry.source]]
name="gitlab-fhs-common"
url = "https://gitlab.com/api/v4/projects/66141956/packages/pypi/simple"


[[tool.poetry.source]]
name = "PyPI-public"
url = "https://pypi.org/simple"

[tool.isort]
profile = "black"

[tool.black]
line-length = 130

[build-system]
requires = ["poetry>=2.0", "poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
