[project]
name = "ska-mid-cbf-fhs-vcc"
version = "0.3.2"
description = "SKA Mid.CBF FHS VCC"
authors = [
  { name = "Jason Turner", email = "jason.turner@mda.space" },
  { name = "Ben Herriott", email = "ben.herriott@mda.space" },
  { name = "Justin Wamback", email = "justin.wamback@mda.space" },
]
license = "BSD license"
readme = "README.md"

[project.scripts]
FhsVccStackDeviceServer = 'ska_mid_cbf_fhs_vcc.fhs_vcc_stack_device_server:main'
SimVCCAllBandsController = 'ska_mid_cbf_fhs_vcc.vcc_all_bands.vcc_sim:main'

[tool.poetry]
packages = [{ include = "ska_mid_cbf_fhs_vcc", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
mpmath = "^1.3.0"
backoff = "^2.2.1"
typing-extensions = "^4.8.0"
pytango = "^9.5.1"
pyyaml = "^6.0.1"
requests = "^2.32.3"
ska-tango-base = "1.0.0"
ska-control-model = "1.1.0"
ska-tango-testing = "0.8.0"
ska-ser-log-transactions = "^0.2.2+ae0f5c92"
ska-telmodel = "1.21.0"
polling2 = "^0.5.0"
dataclasses-json = "^0.6.7"
debugpy = "^1.8.5"
pyro5 = "^5.15"
# Uncomment one of the below to get ska-mid-cbf-fhs-common from one of three sources:
# Official tagged release from CAR
#ska-mid-cbf-fhs-common = "0.2.5"
# Commit hash version from Gitlab
ska-mid-cbf-fhs-common = { version = "0.2.5+dev.c1e5a25b8", source = "gitlab-fhs-common" }
# Local repository
# ska-mid-cbf-fhs-common = { path = "../ska-mid-cbf-fhs-common", develop = true }
kubernetes = "^34.1.0"
parse = "^1.20.2"

[tool.poetry.group.dev.dependencies]
pytest-pydocstyle = "2.3.2"
pytest-pycodestyle = "2.3.1"
pytest = "8.3.1"
pytest-bdd = "^7.2.0"
pytest-cov = "^5.0.0"
pytest-forked = "^1.6.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-repeat = "^0.9.3"
pytest-pylint = "^0.21.0"
pylint = "3.2.6"
pylint-junit = "0.3.4"
flake8-quotes = "^3.4.0"
flake8-annotations = "^3.0.1"
flake8-import-conventions = "0.1.0"
flake8-pep585 = "0.1.7"
flake8-bugbear = "24.12.12"

[tool.poetry.group.docs.dependencies]
sphinx = "^8"
ska-ser-sphinx-theme = "^0.2.1"
myst-parser = "^4.0.1"
sphinx_collapse = "^0.1.3"
sphinxcontrib-mermaid = "^0.9.2"
black = "^23.9.1"
flake8 = "^6.1.0"
sphinxcontrib-plantuml = "^0.26"
sphinxcontrib-apidoc="^0.6.0"

[[tool.poetry.source]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[[tool.poetry.source]]
name="gitlab-fhs-common"
url = "https://gitlab.com/api/v4/projects/66141956/packages/pypi/simple"

[[tool.poetry.source]]
name = "PyPI-public"
url = "https://pypi.org/simple"

[tool.isort]
profile = "black"

[tool.black]
line-length = 130

[build-system]
requires = ["poetry>=2.0", "poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
